# Expensea

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  factory.py  main.py  seed.py
apps/api/app/ai/: __init__.py  contracts.py  errors.py  extraction.py  factory.py  mock.py  ollama.py  proposal_dto.py  proposal_repository.py  proposal_service.py
apps/api/app/api/: __init__.py  routes.py
apps/api/app/auth/: __init__.py  authenticator.py  principal.py
apps/api/app/connectors/: __init__.py  contracts.py  csv_import.py  gmail.py  google_keep_takeout.py  manual_note.py  mock_receipt.py  registry.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/domain/: __init__.py  enums.py  money.py  normalization.py
apps/api/app/graphql/: __init__.py  (+7 more)
apps/api/migrations/: README  env.py
apps/api/tests/: conftest.py  test_ai_extraction.py  test_ai_live.py  test_ai_provider.py  test_authentication.py  test_csv_connector.py  test_database_fixture.py  test_demo_seed.py  test_google_connectors.py  test_ingestion_contracts.py  test_ingestion_models.py  test_ingestion_service.py  test_ledger_commands.py  test_ledger_graphql.py  test_ledger_primitives.py  test_ledger_service.py  test_obligation_graphql.py  test_obligation_service.py  test_proposal_graphql.py  test_proposal_service.py  test_recurring_graphql.py  test_recurring_service.py  test_settings.py  test_system_api.py
(+107 files in other folders)
