[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "spendgraph-api"
version = "0.1.0"
description = "SpendGraph AI API foundation"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "strawberry-graphql[fastapi]>=0.253,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<3",
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<10",
  "pytest-asyncio>=1.3,<2",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "database: requires an explicitly enabled disposable PostgreSQL schema",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "E",
  "F",
  "I",
  "RUF",
  "SIM",
  "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true
